--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "Liga-A-start-template",
+  "name": "Jewellery",
   "version": "1.0.0",
-  "description": "Стартовый шаблон сборки Лиги А",
+  "description": "Jewellery",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.x",
     "autoprefixer": "9.5.x",
     "browser-sync": "2.26.x",
+    "eslint": "4.16.0",
+    "eslint-config-htmlacademy": "0.4.x",
     "gulp": "4.0.x",
+    "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.1",
-    "gulp-imagemin": "^5.0.3",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-json-concat": "^0.2.0",
     "gulp-plumber": "1.2.x",
     "gulp-postcss": "8.0.x",
     "gulp-posthtml": "^3.0.4",
@@ -19,10 +23,8 @@
     "gulp-webp": "^4.0.1",
     "pixel-glass": "^1.0.13",
     "posthtml-include": "^1.2.0",
-    "stylelint": "9.10.x",
-    "stylelint-config-htmlacademy": "0.1.x",
-    "eslint": "4.16.0",
-    "eslint-config-htmlacademy": "0.4.x"
+    "stylelint": "^13.13.1",
+    "stylelint-config-htmlacademy": "^0.1.10"
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
@@ -50,6 +52,8 @@
     "node": "8.15"
   },
   "dependencies": {
-    "del": "^4.1.1"
+    "@jsjson/jsoncat": "^0.6.3",
+    "del": "^4.1.1",
+    "imagemin-jpegtran": "^7.0.0"
   }
 }
