--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "@jsjson/jsoncat": "^0.6.3",
     "del": "^4.1.1",
-    "imagemin-jpegtran": "^7.0.0"
+    "imagemin-jpegtran": "^7.0.0",
+    "swiper": "^6.8.1"
   }
 }
